# docs/swagger.json
@@ -139,7 +139,7 @@
                 "tags": [
                     "league"
                 ],
-                "summary": "Time Machine rollback",
+                "summary": "Rollback league state",
                 "parameters": [
                     {
                         "type": "integer",
@@ -293,7 +293,7 @@
                 }
             }
         },
-        "/simulation/oracle": {
+        "/simulation/championship-probabilities": {
             "get": {
                 "description": "Runs 1,000 Monte Carlo simulations to calculate Championship Win %",
                 "produces": [
@@ -302,7 +302,7 @@
                 "tags": [
                     "simulation"
                 ],
-                "summary": "Monte Carlo predictions",
+                "summary": "Championship probabilities",
                 "responses": {
                     "200": {
                         "description": "OK",
